# toylibc

./: Cargo.toml  README.md  make.sh  raw.json
.cargo/: config
src/: constants.rs  lib.rs  panic.rs  types.rs
src/c_style/: errno.rs  mod.rs
src/io/: basic.rs  mod.rs
src/math/: functions.rs  mod.rs
src/memory/: mod.rs  operations.rs
src/posix/: ipc.rs  memory.rs  mod.rs
src/posix/thread/: mod.rs  vm_lock.rs  wrappers.rs
src/time/: instant.rs  mod.rs  sys.rs
src/utils/: bitwise.rs  cpu.rs  futex.rs  mod.rs
src/utils/parking_lot/: condvar.rs  elision.rs  mod.rs  mutex.rs  parking_lot_core.rs  raw_mutex.rs  raw_rwlock.rs  rwlock.rs  spinwait.rs  thread_parker.rs  util.rs  word_lock.rs
src/utils/thread_local/: cached.rs  mod.rs  thread_id.rs  unreachable.rs
