[package]
name = "toylibc"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
packed_simd = "0.3.3"
spin = "0.5.2"
syscalls = "0.1.4"

[dependencies.num-complex]
version = "0.2"
default-features = false

[dependencies.rand]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.simdeez]
version = "1.0.0"

