[package]
name = "toylibc"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
packed_simd = "0.3.3"
spin = "0.5.2"
syscalls = "0.1.4"
libm = "0.2.1"
rusty-asm = "0.2.1"
lock_api = "0.3.2"
smallvec = "1.1.0"
time = { version = "0.2", default-features = false }


[dependencies.num-complex]
version = "0.2"
default-features = false

[dependencies.rand]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.simdeez]
version = "1.0.0"

[package.metadata.cargo-xbuild]
memcpy = false

[lib]
name = "c"
crate-type = ["staticlib"]